removed leftovers of the astro pipeline
